--- a/Festivals/src/main/resources/application.properties
+++ b/Festivals/src/main/resources/application.properties
@@ -5,3 +5,4 @@ spring.datasource.password=student
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 
+spring.thymeleaf.cache=false
