--- a/Festivals/src/main/resources/application.properties
+++ b/Festivals/src/main/resources/application.properties
@@ -6,3 +6,5 @@ spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 
 spring.thymeleaf.cache=false
+
+spring.profiles.active=thyme
