--- a/Festivals/src/main/resources/validation.properties
+++ b/Festivals/src/main/resources/validation.properties
@@ -4,8 +4,8 @@ NotEmpty.appUserForm.lastName=Last name is required
 NotEmpty.appUserForm.email=Email is required
 NotEmpty.appUserForm.password=Password is required
 NotEmpty.appUserForm.confirmPassword=Confirm Password is required
-NotEmpty.appUserForm.age=Gender is required
-NotEmpty.appUserForm.phone=Country is required
+NotEmpty.appUserForm.age=Age is required
+NotEmpty.appUserForm.phone=Phone is required
  
 Pattern.appUserForm.email=Invalid email
 Duplicate.appUserForm.email=Email has been used by another account
