--- a/Festivals/src/main/resources/application.properties
+++ b/Festivals/src/main/resources/application.properties
@@ -7,4 +7,4 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 
 spring.thymeleaf.cache=false
 
-spring.profiles.active=thyme
+spring.profiles.active=rest
